--- a/src/components/background/background.css
+++ b/src/components/background/background.css
@@ -1,12 +1,15 @@
 .background {
     width: 100%;
-    height: 100vh
+    min-width: 100%;
+    height: 100vh;
+    overflow: hidden;
 }
 
 video {
     width: 100%;
     height: 100%;
     object-fit: cover;
+
 }
 
 .overlay {
@@ -16,6 +19,6 @@ video {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.5)
-    ;
+    background-color: rgba(0,0,0,0.5);
+    overflow: hidden;
 }
