--- a/src/components/game/game.css
+++ b/src/components/game/game.css
@@ -4,8 +4,19 @@
     top: 16%;
     display: flex;
     flex-direction: row;
+    flex-shrink: 2;
     justify-content: space-around;
 }
+
+.show-card h2 {
+    margin: 10px;
+}
+
+/* @media only screen and (max-width: 600px) {
+    .show-card {
+        height: 400px;
+    }
+} */
 
 .show-score {
     position: absolute;
