--- a/src/components/game/score.css
+++ b/src/components/game/score.css
@@ -7,7 +7,14 @@ margin-top: 120px;
 
 }
 
+
 .score {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: white;
+
 }
+
+@media only screen and (max-width: 425px) {
+    .score-container {
+        margin-top: 50px;    }
+  }
