--- a/src/components/game/card.css
+++ b/src/components/game/card.css
@@ -36,10 +36,19 @@
 @media only screen and (max-width: 1275px) {
     .image-container {
         height: 100%;
+        min-height: 150px;
     }
     .image-container h4{
         font-size: 100%;
     }
+
+}
+
+@media only screen and (max-width: 475px) {
+    .card {
+        margin-top: 100px;
+    }
+    
 
 }
 
