--- a/src/components/background/background.css
+++ b/src/components/background/background.css
@@ -9,6 +9,7 @@ video {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    pointer-events: none;
 
 }
 
@@ -19,6 +20,6 @@ video {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     overflow: hidden;
 }
