--- a/src/components/game/spinner.css
+++ b/src/components/game/spinner.css
@@ -31,6 +31,5 @@ h2 {
     align-items: center;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 40px;
-    color: white;
+    color: rgb(18, 126, 90);
 }
-
