--- a/src/components/game/score.css
+++ b/src/components/game/score.css
@@ -1,20 +1,21 @@
 .score-container {
-display: flex;
-align-items: center;
-justify-content: center;
-margin: 20px;
-margin-top: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 20px;
+    margin-top: 120px;
 
 }
 
 
 .score {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: white;
+    color: rgb(18, 126, 90);
 
 }
 
 @media only screen and (max-width: 425px) {
     .score-container {
-        margin-top: 50px;    }
-  }
+        margin-top: 50px;
+    }
+}
