--- a/src/components/howTo/howTo.css
+++ b/src/components/howTo/howTo.css
@@ -10,6 +10,5 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: rgb(18, 126, 90);
 }
-
