--- a/src/components/nav/menu.css
+++ b/src/components/nav/menu.css
@@ -2,4 +2,10 @@
     position: absolute;
     width: 100%;
     z-index: 10000;
+    background-color: rgb(18, 126, 90);
+}
+
+.container-fluid {
+    display: flex;
+    justify-content: center;
 }
